# headless-weechat

src/gui/: CMakeCache.txt  CMakeLists.txt
src/gui/curses/: gui-curses-bar-window.c  gui-curses-color.c
src/gui/headless/: CMakeLists.txt  README.md  bar-window.c  chat.c  color.c  key.c  main.c  mouse.c  term.c  window.c
